@@ -1,3 +1,8 @@
+2006-01-04  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/data.py:  Finish removing monitor information.
+	* pykickstart/writer.py:  Clean up output quoting a bit.
+
 2005-12-12  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/data.py:  Remove monitor information from xconfig.
